# custusx-source

./: Editlog.txt  README.md
CMake/: cxInitializeLibraries.cmake  cxInstallCustusX.cmake  cxInstallUtilities.cmake
config/tool/Tools/Shared/NDI-Pointer-8700340_POLARIS/: 8700340.cal
source/: CMakeLists.txt
source/apps/: CMakeLists.txt
source/apps/insertplanner/: CMakeLists.txt
source/apps/insertplanner/cmake/: VTKConfig.cmake
source/apps/insertplanner/include/StateSpace/: SO3.hpp  StateSpace.hpp  insertSpace.hpp
source/apps/insertplanner/include/dec/: vtkForwardDeclarations.h
source/apps/insertplanner/include/planner/: InsertPlanner.hpp
source/apps/insertplanner/src/: main.cpp
source/apps/tests/: CMakeLists.txt
source/gui/: CMakeLists.txt  CMakeLists.txt.autosave  cxMainWindow.cpp
source/gui/customizedWidgets/: cxCustomizedWidget.cpp  cxCustomizedWidget.h
source/plugins/: CMakeLists.txt
source/plugins/org.custusx.control/: CMakeLists.txt  cxControlGUIExtenderService.cpp  cxControlGUIExtenderService.h  cxControlPluginActivator.cpp  cxControlPluginActivator.h  cxControlWidget.cpp  cxControlWidget.h
source/plugins/org.custusx.control/control/: data_3d.txt  sharedcontrol.cpp
source/plugins/org.custusx.control/testing/: CMakeLists.txt  cxtestExportDummyClassForLinkingOnWindowsInLibWithoutExportedClass.cpp
source/plugins/org.custusx.control/wrapper/: cxSharedControlWrapper.cpp  cxSharedControlWrapper.h
source/plugins/org.custusx.core.openigtlink3/network/: cxNetworkHandler.cpp
source/plugins/org.custusx.core.patientmodel/: cxSessionStorageServiceImpl.cpp
source/plugins/org.custusx.core.tracking/: cxTrackingImplService.cpp
source/plugins/org.custusx.core.video/: cxVideoConnection.h
source/plugins/org.custusx.example/: CMakeLists.txt  cxExampleWidget.cpp  cxExampleWidget.h
source/plugins/org.custusx.filter.accusurf/testing/: cxtestAccusurfFilter.cpp
source/plugins/org.custusx.filter.airwaysfromcenterline/: cxAirwaysFromCenterline.cpp
source/plugins/org.custusx.filter.routetonode/: CMakeLists.txt  cxFilterRouteToNodePluginActivator.cpp  cxFilterRouteToNodePluginActivator.h  cxRouteToNode.cpp  cxRouteToNode.h  cxRouteToNodeFilterService.cpp  cxRouteToNodeFilterService.h
source/plugins/org.custusx.filter.routetonode/include/StateSpace/: rn.hpp
source/plugins/org.custusx.filter.routetonode/include/macros/: class_forward.h
source/plugins/org.custusx.filter.routetonode/include/planner/: InsertPlanner.hpp  InsertPlanner.hpp.autosave  Planner.hpp  RRT.hpp  Tree.hpp
source/plugins/org.custusx.filter.routetotarget/: CMakeLists.txt  cxRouteToTarget.cpp  cxRouteToTarget.h  cxRouteToTarget.h.autosave
source/plugins/org.custusx.help/: cxHelpPluginActivator.h
source/plugins/org.custusx.node/: CMakeLists.txt  cxNodeGUIExtenderService.cpp  cxNodeGUIExtenderService.h  cxNodePluginActivator.cpp  cxNodePluginActivator.h  cxNodeWidget.cpp  cxNodeWidget.h
source/plugins/org.custusx.node/testing/: CMakeLists.txt  cxtestExportDummyClassForLinkingOnWindowsInLibWithoutExportedClass.cpp  cxtestNodePlugin.cpp
source/plugins/org.custusx.planning/: CMakeLists.txt  cxPlanningGUIExtenderService.cpp  cxPlanningGUIExtenderService.h  cxPlanningPluginActivator.cpp  cxPlanningPluginActivator.h  cxPlanningWidget.cpp  cxPlanningWidget.h
source/plugins/org.custusx.planning/include/StateSpace/: SE3.hpp  SO3.hpp  StateSpace.hpp  insertSpace.hpp  rn.hpp
source/plugins/org.custusx.planning/include/planner/: InsertPlanner.hpp  Planner.hpp  RRT.hpp  Tree.hpp
source/plugins/org.custusx.planning/test/: insert_state_test.cpp
source/plugins/org.custusx.vslam/: CMakeLists.txt  cxVslamGUIExtenderService.cpp  cxVslamGUIExtenderService.h  cxVslamPluginActivator.cpp  cxVslamPluginActivator.h  cxVslamWidget.cpp  cxVslamWidget.h
source/plugins/org.custusx.vslam/Apps/: DefSLAM  DefSLAMGT  DefSLAMGTCT  rungt.sh  simple_camera.cc  stereo_groundtruth.cc
source/plugins/org.custusx.vslam/Modules/GroundTruth/: GroundTruthFrame.cc  GroundTruthKeyFrame.cc
source/plugins/org.custusx.vslam/Modules/Mapping/: Schwarp.cc  Schwarp.h  SchwarpDatabase.h  ShapeFromNormals.cc  Surface.h
source/plugins/org.custusx.vslam/Modules/Matching/: DefORBmatcher.cc  DefORBmatcher.h
source/plugins/org.custusx.vslam/Modules/Tracking/: DefOptimizer.cc  DefOptimizer.h
source/plugins/org.custusx.vslam/Modules/Viewer/: DefViewer.cc
source/resource/: CMakeLists.txt
source/resource/core/: CMakeLists.txt
source/resource/core/vesselReg/: SeansVesselReg.hxx.autosave
source/resource/videoServer/: CMakeLists.txt  cxImageStreamerOpenCV.cpp  cxImageStreamerOpenCV.h
